Fixed: jAlert z-index

--- a/assets/css/learnpress.less
+++ b/assets/css/learnpress.less
@@ -573,6 +573,12 @@
 
 /* POPUP */
 
+#popup_overlay{
+    z-index: 10000000 !important;
+}
+#popup_container{
+    z-index: 10000001 !important;
+}
 body.course-has-popup {
     overflow: hidden;
 }
